working on database integration, user interface, API endpoints, implementing functionality